# standchen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  settings.json.example
src/: manage.py
src/standchen/bot/: apps.py  bot_settings.py  core_commands.py  urls.py  views.py
src/standchen/client/: apps.py  player.py  views.py
src/standchen/client/templates/audios/: audio_list.html
src/standchen/player/: apps.py  common.py  forms.py  models.py  player.py  urls.py  views.py
src/standchen/player/bot/: core_commands.py
src/standchen/player/migrations/: 0001_initial.py  0002_alter_standchenaudio_length.py  0003_playlist.py
src/standchen/player/templates/audios/: create_playlist.html  list.html  upload.html
src/standchen/player/views/: actions.py  pages.py
src/standchen/server/: asgi.py  django_settings.py  urls.py  wsgi.py
src/standchen/signals/: __init__.py
