[project]
name = "standchen"
version = "0.1.0"
description = "django-based discord bot"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "discord (>=2.3.2,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"
logging = "^0.4.9.6"

[tool.poetry.scripts]
start = "manage:main"
